# alShaders

./: .gitignore  CMakeLists.txt  INSTALL  Porting.md  README
alBlackbody/: alBlackbody.cpp
alCache/: alCache.cpp  htoa_memory.h
alCel/: alCel.cpp
alColorSpace/: alColorSpace.cpp
alCombine/: alCombineColor.cpp  alCombineFloat.cpp
alCurvature/: alCurvature.cpp
alFlake/: alFlake.cpp
alFresnel/: CMakeLists.txt  alFresnelConductor.cpp
alHair/: CMakeLists.txt  alHair.cpp  scattering.h
alImage/: alImage.cpp
alInputVector/: alInputScalar.cpp  alInputVector.cpp
alJitterColor/: alJitterColor.cpp
alLayer/: CMakeLists.txt  alLayer.cpp  alLayerColor.cpp  alLayerFloat.cpp
alMeasured/: CMakeLists.txt  alMeasured.cpp
alNoise/: alCellNoise.cpp  alFlowNoise.cpp  alFractal.cpp  alGaborNoise.cpp
alPattern/: alPattern.cpp
alRemap/: alRemapColor.cpp  alRemapFloat.cpp
alSurface/: #alSurface.cpp#  CMakeLists.txt  MIS.h  alSurface.cpp  alSurface.h  alSurfaceOLD  microfacet.h  sss.cpp  sss.h
alSwitch/: alSwitchColor.cpp  alSwitchFloat.cpp
alTriplanar/: alTriplanar.cpp
alWriteIds/: alWriteIds.cpp
alWriteIdsDriver/: alWriteIdsDriver.cpp
common/: Color.cpp  Color.h  Remap.h  alUtil.h  aovs.h  fresnel.cpp  tea.h
cryptomatte/: CMakeLists.txt  cryptomatte.h  cryptomatte_aov.cpp  cryptomatte_filter.cpp  filters.h
doc/: Porting.md  ai_shaderglobals-diff.html
myVex/: CMakeLists.txt  myVex.cpp
